log
Thu, Mar 20, 2025  1:38:00 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  1:56:44 PM: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:88:11: error: unused variable 'pilaAux' [-Werror=unused-variable]
    Stack* pilaAux ;
           ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
64b35d8
